# PolyMesh_Benchmark

./: .gitignore  CMakeLists.txt  README.md
include/: alloc_observer.h  my_utils.h  precision_timer.h
include/benchmark/: benchmark.h  benchmark_openmesh.h  benchmark_polymesh.h
include/benchmark/result/: benchmark_result.h  benchmark_result_storage.h
include/benchmark_result/: benchmark_result.h  benchmark_result_storage.h
include/poly_mesh/: poly_mesh.h
src/: alloc_observer.cpp  main.cpp  my_utils.cpp  precision_timer.cpp
src/benchmark/: benchmark.cpp  benchmark_openmesh.cpp  benchmark_polymesh.cpp
src/benchmark/result/: benchmark_result.cpp  benchmark_result_storage.cpp
src/benchmark_result/: benchmark_result.cpp  benchmark_result_storage.cpp
src/poly_mesh/: poly_mesh.cpp
